--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -1,3 +1,70 @@
+industry2.achievements.page.desc=A very basic guide to Industry2.
+
+achievement.industry.resin=Sticky Situation!
+achievement.industry.resin.desc=Get resin from a Rubberwood tree using a Treetap.
+achievement.industry.ores=New Ore Miner
+achievement.industry.ores.desc=Mine tin, copper, or uranium ore.
+achievement.industry.hammer=Smashing!
+achievement.industry.hammer.desc=Craft a plate hammer out of iron and sticks.
+achievement.industry.cutters=Snip Snip
+achievement.industry.cutters.desc=Craft wire cutters out of iron plates and ingots.
+achievement.industry.cables=Energy Flow
+achievement.industry.cables.desc=Make some cables. (Then insulate them with rubber)
+achievement.industry.generator=Suitable Power
+achievement.industry.generator.desc=Make a Generator.
+achievement.industry.furnace=Even Hotter Topic
+achievement.industry.furnace.desc=Build an Electric Furnace.
+achievement.industry.macerator=Double Trouble
+achievement.industry.macerator.desc=Build a Macerator.
+achievement.industry.compressor=Tight Squeeze
+achievement.industry.compressor.desc=Build a Compressor.
+achievement.industry.wiremill=Extra Mile
+achievement.industry.wiremill.desc=Build a Wiremill.
+achievement.industry.extractor=Super Treetap
+achievement.industry.extractor.desc=Build an Extractor.
+achievement.industry.recycler=Not a Trommel
+achievement.industry.recycler.desc=Build a Recycler.
+achievement.industry.cannery=Shelf-Stable
+achievement.industry.cannery.desc=Build a Canning Machine.
+achievement.industry.trommel=Roundabout
+achievement.industry.trommel.desc=Build an Electric Trommel.
+achievement.industry.watermill=Hydro Power
+achievement.industry.watermill.desc=Build a Watermill.
+achievement.industry.windmill=Is a Hurricane A'Blowin?
+achievement.industry.windmill.desc=Build a Windmill.
+achievement.industry.geothermal=Hot Power
+achievement.industry.geothermal.desc=Build a Geothermal Generator.
+achievement.industry.solar=Sun-Power
+achievement.industry.solar.desc=Build a Solar Generator.
+achievement.industry.array.lv=Solar Upgrade
+achievement.industry.array.lv.desc=Build an LV Solar Array
+achievement.industry.array.mv=Hot Sun
+achievement.industry.array.mv.desc=Build an MV Solar Array.
+achievement.industry.array.hv=Just Too Much
+achievement.industry.array.hv.desc=Build an HV Solar Array.
+achievement.industry.array.ehv=Overkill
+achievement.industry.array.ehv.desc=Build an EHV Solar Array. (Then pat yourself on the back)
+achievement.industry.batbox=Stash It!
+achievement.industry.batbox.desc=Build an LV Batbox.
+achievement.industry.drill=Meet the Dentist
+achievement.industry.drill.desc=Make a mining drill.
+achievement.industry.drill.gold=Finer Mining
+achievement.industry.drill.gold.desc=Upgrade to a gold-tipped mining drill.
+achievement.industry.drill.diamond=Valuable Upgrade
+achievement.industry.drill.diamond.desc=Upgrade to a diamond-tipped mining drill.
+achievement.industry.chainsaw=Lumber Jack
+achievement.industry.chainsaw.desc=Make a Chainsaw.
+achievement.industry.chainsawcreeper=Creeper Chainsaw Massacre
+achievement.industry.chainsawcreeper.desc=Kill a Creeper with a Chainsaw.
+achievement.industry.nanosword=May the Force Be With You
+achievement.industry.nanosword.desc=Make a Nanosword.
+achievement.industry.fabricator=Energy to Matter
+achievement.industry.fabricator.desc=Build an Energy Fabricator.
+achievement.industry.iridium=Rare Wonders
+achievement.industry.iridium.desc=With three pieces of Iridium Scrap, make an ingot. (NOTE - INGOTS CAN'T BE FABRICATED!)
+achievement.industry.iridiumarmor=Unkillable
+achievement.industry.iridiumarmor.desc=Make a piece of unbreakable Iridium armor.
+
 tile.industry.ore.tin.stone.name=Stone Tin Ore
 tile.industry.ore.tin.stone.desc=Tin nuggets embedded in stone.
 tile.industry.ore.tin.basalt.name=Basalt Tin Ore
@@ -283,6 +350,11 @@ item.industry.upgrade.transformer.desc=Makes your machines handle a higher volta
 item.industry.upgrade.energy.name=Energy Upgrade
 item.industry.upgrade.energy.desc=Makes your machines store 10,000 more energy.
 item.industry.upgrade.pusher.name=Pusher Upgrade
-item.industry.upgrade.pusher.desc=Makes your machines automatically push items to the right.
+item.industry.upgrade.pusher.desc=Makes your machines automatically push items from the output slots.
 item.industry.upgrade.puller.name=Puller Upgrade
-item.industry.upgrade.puller.desc=Makes your machines automatically pull items from the top.
+item.industry.upgrade.puller.desc=Makes your machines automatically pull items into the input slots.
+item.industry.upgrade.blasting.name=Blasting Upgrade
+item.industry.upgrade.blasting.desc=Makes your smelting machines burn even hotter.
+
+item.industry.food.joffos.name=Joffo Cakes
+item.industry.food.joffos.desc=Delicious enough to spend a game budget on!
