--- a/src/main/resources/lang/industry/en_US.lang
+++ b/src/main/resources/lang/industry/en_US.lang
@@ -58,7 +58,9 @@ achievement.industry.chainsawcreeper=Creeper Chainsaw Massacre
 achievement.industry.chainsawcreeper.desc=Kill a Creeper with a Chainsaw.
 achievement.industry.nanosword=May the Force Be With You
 achievement.industry.nanosword.desc=Make a Nanosword.
-achievement.industry.fabricator=Energy to Matter
+achievement.industry.reactor=Nuclear Architecture
+achievement.industry.reactor.desc=Build a nuclear reactor. (HINT: Assembly requires two IO ports, and four casing)
+achievement.industry.fabricator=What's the Matter?
 achievement.industry.fabricator.desc=Build an Energy Fabricator.
 achievement.industry.iridium=Rare Wonders
 achievement.industry.iridium.desc=With three pieces of Iridium Scrap, make an ingot. (NOTE - INGOTS CAN'T BE FABRICATED!)
