--- a/src/main/resources/lang/industry/en_US/stats.lang
+++ b/src/main/resources/lang/industry/en_US/stats.lang
@@ -3,7 +3,7 @@ industry2.achievements.page.desc=A very basic guide to Industry2.
 achievement.industry.resin=Sticky Situation!
 achievement.industry.resin.desc=Get resin from a Rubberwood tree using a Treetap.
 achievement.industry.ores=New Ore Miner
-achievement.industry.ores.desc=Mine tin, copper, or uranium ore.
+achievement.industry.ores.desc=Mine tin or copper ore.
 achievement.industry.hammer=Smashing!
 achievement.industry.hammer.desc=Craft a plate hammer out of iron and sticks.
 achievement.industry.cutters=Snip Snip
